# bufalo_ros

./: README.md
bufalo_control/: CMakeLists.txt  package.xml
bufalo_control/config/: control.yml  localization.yml
bufalo_control/launch/: control.launch
bufalo_description/: CMakeLists.txt  package.xml
bufalo_description/launch/: description.launch  display.launch
bufalo_description/meshes/: base_link.STL  bumper.dae  control_panel.STL  side_plate.STL  top_bar.STL  wheel.dae
bufalo_description/rviz/: bufalo_with_sensors.rviz
bufalo_description/urdf/: body.xacro  bufalo.urdf.xacro  transmission.xacro
bufalo_description/urdf/sensors/: imu.xacro  laser.xacro  rgb_camera.xacro
bufalo_gazebo/: CMakeLists.txt  package.xml
bufalo_gazebo/launch/: empty_world.launch  spawn_bufalo.launch  willowgarage_world.launch
