<?xml version="1.0"?>
<package format="2">
  <name>bufalo_control</name>
  <version>0.0.1</version>
  <description>The bufalo_control package</description>

  <maintainer email="lucas.hehl@darwinrobotica.com.br">Lucas Hehl</maintainer>

  <license>GPLv3</license>

  <url type="website">https://docs.darwinrobotica.com.br</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>diff_drive_controller</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>bufalo_description</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>diff_drive_controller</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>bufalo_description</build_export_depend>
  <build_export_depend>robot_localization</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>bufalo_description</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>

  </export>
</package>
