<?xml version="1.0"?>
<package format="2">
  <name>bufalo_description</name>
  <version>0.0.1</version>
  <description>The bufalo_description package</description>

  <maintainer email="lucas.hehl@darwinrobotica.com.br">Lucas Hehl</maintainer>

  <license>GPLv3</license>

  <url type="website">https://docs.darwinrobotica.com.br</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>

  </export>
</package>
